fix: select que não estava pegando estilo dark mode

--- a/frontend/src/styles/ModalNewTask.css
+++ b/frontend/src/styles/ModalNewTask.css
@@ -182,3 +182,7 @@ body.dark-theme .options .selected {
 .options button.selected:hover {
   background-color: var(--purple-saturated-color);
 }
+
+select{
+  color:var(--black-color);
+}
